fixed 添加z-index修复因为设置relative导致的文字穿透出header的问题

--- a/src/components/Narcissu/index.css
+++ b/src/components/Narcissu/index.css
@@ -154,4 +154,5 @@ body {
 
 .main header {
   display: flex;
+  z-index: 1;
 }
